--- a/css/style.css
+++ b/css/style.css
@@ -434,9 +434,8 @@ p {
 .hero-content h1 {
 	font-size: 34px;
 	font-weight: 400;
-	color: #262626;
+	color: #285430;
 	line-height: 1.2;
-	letter-spacing: -1px;
 	margin: 0 0 20px 0;
 }
 
@@ -452,9 +451,9 @@ p {
 
 .btn-action {
  font-family: Open Sans;
- background-color: #1eb858;
- border: 1px solid #1eb858;
- border-radius: 0;
+ background-color: #0F5E1C;
+ border: 1px solid #0F5E1C;
+ border-radius: 20px;
  color: #FFFFFF;
  font-size: 13px;
  font-weight: 400;
@@ -467,15 +466,16 @@ p {
  -moz-transition: 200ms;
  -o-transition: 200ms;
  transition: 200ms;
+ margin-right: 20px;
 }
 
 .btn-action:hover, .btn-action:focus,
 .btn-action:active, .btn-action:active:focus {
  background: transparent;
  outline: none;
- color: #1eb858;
+ color: #0F5E1C;
  background: transparent;
- border-color: #1eb858;
+ border-color: #0F5E1C;
 }
 
 
@@ -562,9 +562,8 @@ font-family: Arial;
 .form .hero-content h1 {
 	font-size: 34px;
 	font-weight: 700;
-	color: #222222;
+	color: #285430;
 	line-height: 1.2;
-	letter-spacing: -1px;
 	margin: 0 0 20px 0;
 }
 
@@ -590,8 +589,8 @@ font-family: Arial;
   border-radius: 0 5px 5px 0;
   margin: 0;
   padding: 0 25px 0 25px;
-	border-color: #1eb858;
-  background-color: #1eb858;
+	border-color: #0F5E1C;
+  background-color: #0F5E1C;
   color: #FFFFFF;
 	box-shadow: 0 0 1px transparent;
   outline: none;
@@ -601,23 +600,23 @@ font-family: Arial;
 }
 
 .form .subscribe-form .submit-button:hover {
-  border-color: #1a9e4c;
-    background-color: #1a9e4c;
+  border-color: #0F5E1C;
+    background-color: #0F5E1C;
   -webkit-transition: 500ms;
 	-moz-transition: 500ms;
   transition: 500ms;
 }
 
 .form .btn-action {
-	background: #1eb858;
-	border-color: #1eb858;
+	background: #0F5E1C;
+	border-color: #0F5E1C;
 	color: #FFFFFF;
 }
 
 .form .btn-action:hover {
 	background: transparent;
-	border-color: #1eb858;
-	color: #1eb858;
+	border-color: #0F5E1C;
+	color: #0F5E1C;
 }
 
 
@@ -841,59 +840,6 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 }
 
 
-/*-------------------------------------------------------
----------------- Slider Section Styling -----------------
---------------------------------------------------------*/
-
-.slider-pro .sp-slide {
-	background: #222222;
-}
-
-.slider-pro h2.sp-layer {
-	font-size: 44px !important;
-	color: #111111;
-	font-weight: bold;
-	letter-spacing: -1px;
-	line-height: 1.3;
-	text-align: left;
-}
-
-.slider-pro p.sp-layer {
-	font-size: 16px;
-	color: #A1A1A1;
-	line-height: 1.4;
-}
-
-.slider-pro a {
-	text-decoration: none;
-	color: #444444;
-	-webkit-transition: 0.5s !important;
-	-moz-transition: 0.5s !important;
-	transition: 0.5s !important;
-}
-
-.slider-pro .link-color {
-	text-decoration: none;
-	color: #111;
-	-webkit-transition: 0.5s !important;
-	-moz-transition: 0.5s !important;
-	transition: 0.5s !important;
-}
-
-.slider-pro a:hover {
-	color: #999999;
-}
-
-
-
-@media only screen and (max-width: 768px) {
-
-	.slider-pro h2.sp-layer {
-		font-size: 34px !important;
-
-	}
-}
-
 
 /* -----------------------------------------------------
 --------------- App Home Styling starts ----------------
@@ -959,14 +905,14 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 
 .app .btn-action {
 	color: #FFFFFF;
-	background: #1eb858;
-	border-color: #1eb858;
+	background: #5F8D4E;
+	border-color: #5F8D4E;
 }
 
 .app .btn-action:hover {
-	color: #1eb858;
+	color: #5F8D4E;
 	background: transparent;
-	border-color: #1eb858;
+	border-color: #5F8D4E;
 }
 
 
@@ -1071,7 +1017,6 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 	font-size: 21px;
 	font-weight: bold;
 	line-height: 1;
-	letter-spacing: 1px;
 	text-transform: capitalize;
 	color: #111111;
 	margin: 50px 0 0 0;
@@ -1117,7 +1062,6 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 	font-size: 37px;
 	font-weight: 900;
 	line-height: 1.2;
-	letter-spacing: -2px;
 	color: #454545;
 	margin: 0 0 30px 0;
 }
@@ -1128,12 +1072,11 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 	font-size: 14px;
 	line-height: 1.5;
 	color: #A1A1A1;
-	letter-spacing: 0;
 }
 
 .pitch-icon {
 	margin: 0 0 10px 0;
-	background: #1eb858;
+	background: #5F8D4E;
 	width: 60px;
 	height: 60px;
 	display: inline-block;
@@ -1323,18 +1266,18 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 
 .feature-sub .sub-inner .btn-action {
 	color: #FFFFFF;
-	background: #1eb858;
-	border-color: #1eb858;
+	background: #5F8D4E;
+	border-color: #5F8D4E;
 }
 
 .feature-sub .sub-inner .btn-action:hover {
-	color: #1eb858;
+	color: #5F8D4E;
 	background: transparent;
-	border-color: #1eb858;
+	border-color: #5F8D4E;
 }
 
 .feature-sub {
-	background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)), url(../images/image-bg.jpg) no-repeat center center;
+	background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)), url(../konten/bg.png) no-repeat center center;
 	background-size: cover;
 	padding: 150px 0 150px 0;
 }
@@ -1344,27 +1287,6 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 	text-align:center;
 	float: left;
 }
-
-/* --------- App Features Sub ------- */
-
-
-.software .feature-sub {
-	background: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.99)), url(../images/app_bg1.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	padding: 150px 0 150px 0;
-}
-
-.software .feature-sub .sub-inner h1 {
-	font-family: 'Josefin Sans';
-	font-size: 34px;
-	font-weight: 300;
-	line-height: 1.1;
-	color: #FFF;
-	margin: 0 0 30px 0;
-}
-
 
 /*  --------------------------------------------------
 ------------- Reviews Section Styling ----------------
@@ -1386,7 +1308,7 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 	font-weight: 400;
 	color: #A1A1A1;
 	line-height: 1.4;
-	margin: 10px 0 50px 0;
+	margin: 30px 0 50px 0;
 }
 
 
@@ -1405,7 +1327,7 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 
 .app-features .icon i {
 	font-size: 72px;
-	color: #1eb858;
+	color: #5F8D4E;
 }
 
 
@@ -1418,10 +1340,9 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 .app-features .feature-single h1 {
 	font-size: 15px;
 	font-weight: 600;
-	color: #222222;
+	color: #2b2a2a;
 	margin: 0 0 10px 0;
 	letter-spacing: 1px;
-	text-transform:uppercase;
 }
 
 .app-features .feature-single p {
@@ -1458,7 +1379,6 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 .split-content h1 {
 	font-size: 37px;
 	font-weight: 900;
-	letter-spacing: -2px;
 	margin: 0 0 20px 0;
 }
 
@@ -1466,7 +1386,6 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 	font-size: 16px;
 	line-height: 1.4;
 	color: #A1A1A1;
-	letter-spacing: 0;
 }
 
 .split-content ul {
@@ -1478,9 +1397,7 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 .split-content ul li {
 	font-family: Open Sans;
 	font-size: 16px;
-	letter-spacing: 0;
 	margin-bottom: 15px;
-	margin-left: 15px;
 	color: #A1A1A1;
 }
 
@@ -1750,7 +1667,17 @@ padding: 120px 10px 50px 350px;
 
 /* -------- Counter Section Styling Ends --------- */
 
+/* galeri */
 
+.galeri h1 {
+	font-size: 37px;
+    font-weight: 900;
+    color: #454545;
+}
+
+.galeri img {
+	padding-top: 20px;
+}
 
 
 /* ----- CTA Section Styling Starts ----- */
@@ -1968,10 +1895,14 @@ padding: 120px 10px 50px 350px;
 .footer-text p {
 font-family:"Open Sans";
 font-size: 12px;
-	color: #1eb858;
+	color: #5F8D4E;
 	font-weight: 400;
 	line-height: 1.4;
 	margin-top: 10px;
+}
+
+.footer a i {
+	color: #5F8D4E;
 }
 
 
@@ -1987,7 +1918,7 @@ font-size: 12px;
 
 
 .back-to-top {
-	background: rgba(30, 184, 88, 0.5);
+	background: #A4BE7B;
 	margin: 0;
 	position: fixed;
 	bottom: 30px;
@@ -2014,7 +1945,7 @@ font-size: 12px;
 }
 
 .back-to-top:hover {
-    background: rgba(30, 184, 88, 0.9);
+    background: #5F8D4E;
     color: #FFFFFF;
 }
 
