--- a/css/style.css
+++ b/css/style.css
@@ -1822,7 +1822,7 @@ padding: 80px 20px 20px 10px;
   width: 100%;
   height: 100%;
 	overflow: hidden;
-	padding-top: 75px;
+	padding-top: 50px;
 	padding-bottom: 20px;
 }
 
@@ -1867,7 +1867,7 @@ padding: 80px 20px 20px 10px;
 
 
 .footer img {
-	margin-bottom: 20px;
+	margin: -20px 0 0 0;
 }
 
 .footer-menu ul {
@@ -1908,6 +1908,7 @@ font-size: 12px;
 
 .footer a i {
 	color: #5F8D4E;
+	margin-right: 10px;
 }
 
 
