--- a/css/style.css
+++ b/css/style.css
@@ -1677,21 +1677,17 @@ padding: 80px 20px 20px 10px;
 	font-size: 37px;
     font-weight: 900;
     color: #454545;
-	margin: -30px 0 -80px 0;
+	margin: -50px 0 -100px;
 }
-
-.galeri img {
-	margin-top: 100px;
-}
-
 
 /* ----- CTA Section Styling Starts ----- */
 
 
 
 .cta-sub {
-	padding-top: 150px;
-	padding-bottom: 150px;
+	margin-top: 20px;
+	padding-top: 120px;
+	padding-bottom: 120px;
 	background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(../images/cta_bg.jpg) no-repeat center center;
 	background-size: cover;
 }
