--- a/css/style.css
+++ b/css/style.css
@@ -1677,7 +1677,12 @@ padding: 80px 20px 20px 10px;
 	font-size: 37px;
     font-weight: 900;
     color: #454545;
-	margin: -50px 0 -100px;
+	margin-top: -50px;
+	margin-bottom: -80px;
+}
+
+.galeri img {
+	margin-top: 100px;
 }
 
 /* ----- CTA Section Styling Starts ----- */
@@ -1814,11 +1819,11 @@ padding: 80px 20px 20px 10px;
 
 .footer {
 	font-family:"Open Sans";
-  background-color: #F3F3F3;
-  width: 100%;
-  height: 100%;
+  	background-color: #F3F3F3;
+  	width: 100%;
+  	height: 100%;
 	overflow: hidden;
-	padding-top: 50px;
+	padding-top: 70px;
 	padding-bottom: 20px;
 }
 
@@ -2065,7 +2070,8 @@ font-size: 12px;
 
 
 	.feature-sub {
-		padding: 200px 0 200px 0;
+		margin: 20px 0 0 0;
+		padding: 180px 0 180px 0;
 	}
 
 	.software .feature-sub .sub-inner h1 {
