--- a/css/style2.css
+++ b/css/style2.css
@@ -2,7 +2,7 @@
     background-color: #fff;
 }
 
-.data-santri h1 {
+.data-santri .judul {
     font-size: 37px;
     font-weight: 900;
     margin: 0 0 30px 0;
