--- a/css/stylebaru.css
+++ b/css/stylebaru.css
@@ -3,9 +3,8 @@
 }
 
 .data-santri .judul {
-    font-size: 37px;
+    font-size: 50px;
     font-weight: 900;
-    margin: 0 0 30px 0;
 }
 
 .data-santri table {
@@ -16,20 +15,20 @@
     font-weight: 600;
 }
 
-.data-santri .tombol1 {
+.data-santri .tombol-hapus {
     border: none;
     border-radius: 30px;
     background-color: #AC4425;
     color: white;
-    margin-right: 10px;
+    padding: 3px 15px;
 }
 
-.data-santri .tombol2 {
+.data-santri .tombol-ubah {
     border: none;
     border-radius: 30px;
     background-color: #5F8D4E;
     color: white;
-    margin-right: 10px;
+    padding: 3px 15px;
 }
 
 .ubah .judul {
@@ -50,7 +49,8 @@
     text-transform: uppercase;
     border: none;
     border-radius: 30px;
-    margin-top: 10px;
+    margin: 20px 5px 0 0;
     background-color: #5F8D4E;
     color: white;
+    padding: 3px 15px;
 }
